PCI8510/LabWindows/PCI8510.h

//#################### AD硬件参数PCI8510_PARA_AD定义 #####################
// 用于AD采样的实际硬件参数
typedef struct _PCI8510_PARA_AD     
{	
	LONG Gains[8];			// 模拟量增益选择阵列，分别控制8个通道
	LONG Frequency;         // 采集频率, 单位为Hz, [1, 500000]
	LONG InputRange;		// 量程选择
	LONG TriggerMode;		// 触发模式选择
	LONG TriggerSource;		// 触发源选择
	LONG TriggerType;		// 触发类型选择(边沿触发/脉冲触发)
	LONG TriggerDir;		// 触发方向选择(正向/负向触发)
	LONG TrigLevelVolt;		// 触发电平(±10000mV)
	LONG ClockSource;		// 内外时钟选择
	LONG bClockOutput;      // 是否将时钟信号输出,=TRUE:允许输出, =FALSE:禁止输出
	LONG OutTrigSource;		// Trig信号输入/输出源
	LONG OutTrigSourceDir;	// Trig信号输入/输出方向选择，=TRUE:允许输出, =FALSE:允许输入
}PCI8510_PARA_AD,*PPCI8510_PARA_AD;
		
	//##################### AD的硬件参数操作函数 ###########################
	BOOL DEVAPI FAR PASCAL PCI8510_SaveParaAD(HANDLE hDevice, PPCI8510_PARA_AD pADPara); // 将当前的AD采样参数保存至系统中
    BOOL DEVAPI FAR PASCAL PCI8510_LoadParaAD(HANDLE hDevice, PPCI8510_PARA_AD pADPara); // 将AD采样参数从系统中读出
    BOOL DEVAPI FAR PASCAL PCI8510_ResetParaAD(HANDLE hDevice, PPCI8510_PARA_AD pADPara); // 将AD采样参数恢复至出厂默认值
	//####################### 数字I/O输入输出函数 #################################
	// 用户可以使用WriteRegisterULong和ReadRegisterULong等函数直接控制寄存器进行I/O
	// 输入输出，但使用下面两个函数更省事，它不需要您关心寄存器分配和位操作等，而只
	// 需象VB等语言的属性操作那么简单地实现各开关量通道的控制。
    BOOL DEVAPI FAR PASCAL PCI8510_SetDeviceDO(				// 输出开关量状态
										HANDLE hDevice,		// 设备句柄								        
										BYTE bDOSts[8]);	// 开关状态
	BOOL DEVAPI FAR PASCAL PCI8510_GetDeviceDI(				// 取得开关量状态     
										HANDLE hDevice,		// 设备句柄								        
										BYTE bDISts[8]);	// 开关状态	
	
	BOOL DEVAPI FAR PASCAL PCI8510_RetDeviceDO(				// 回读开关量状态
										HANDLE hDevice,		// 设备句柄	 
										BYTE bDOSts[8]);	// 开关状态
	//################# 内存映射寄存器直接操作及读写函数 ########################
	// 适用于用户对本设备更直接、更特殊、更低层、更复杂的控制。比如根据特殊的
	// 控制对象需要特殊的控制流程和控制效率时，则用户可以使用这些接口予以实现。
	BOOL DEVAPI FAR PASCAL PCI8510_GetDeviceBar(			// 取得指定的指定设备寄存器组BAR地址
									HANDLE hDevice,			// 设备对象句柄,它由CreateDevice函数创建
									__int64  pbPCIBar[6]);	// 返回PCI BAR所有地址,具体PCI BAR中有多少可用地址请看硬件说明书
	BOOL DEVAPI FAR PASCAL PCI8510_GetDevVersion(			// 获取设备固件及程序版本
									HANDLE hDevice,			// 设备对象句柄,它由CreateDevice函数创建
									PULONG pulFmwVersion,	// 固件版本
									PULONG pulDriverVersion);// 驱动版本
    BOOL DEVAPI FAR PASCAL PCI8510_WriteRegisterByte(		// 往指定寄存器空间位置写入单节字数据
									HANDLE hDevice,			// 设备对象句柄,它由CreateDevice函数创建
									__int64 pbLinearAddr,	// 指定寄存器的线性基地址,它等于GetDeviceAddr中的LinearAddr参数返回值
									ULONG OffsetBytes,		// 相对于线性基地址基地址的偏移位置(字节)
									BYTE Value);			// 往指定地址写入单字节数据（其地址由线性基地址和偏移位置决定）
	BOOL DEVAPI FAR PASCAL PCI8510_WriteRegisterWord(		// 写双字节数据（其余同上）
									HANDLE hDevice, 
									__int64 pbLinearAddr, 
									ULONG OffsetBytes,  
									WORD Value);
	BOOL DEVAPI FAR PASCAL PCI8510_WriteRegisterULong(		// 写四节字数据（其余同上）
									HANDLE hDevice, 
									__int64 pbLinearAddr, 
									ULONG OffsetBytes,  
									ULONG Value);
	BYTE DEVAPI FAR PASCAL PCI8510_ReadRegisterByte(		// 读入单字节数据（其余同上）
									HANDLE hDevice, 
									__int64 pbLinearAddr, 
									ULONG OffsetBytes);
	WORD DEVAPI FAR PASCAL PCI8510_ReadRegisterWord(		// 读入双字节数据（其余同上）
									HANDLE hDevice, 
									__int64 pbLinearAddr, 
									ULONG OffsetBytes);
	ULONG DEVAPI FAR PASCAL PCI8510_ReadRegisterULong(		// 读入四字节数据（其余同上）
									HANDLE hDevice, 
									__int64 pbLinearAddr, 
									ULONG OffsetBytes);
	//################# I/O端口直接操作及读写函数 ########################
	// 适用于用户对本设备更直接、更特殊、更低层、更复杂的控制。比如根据特殊的
	// 控制对象需要特殊的控制流程和控制效率时，则用户可以使用这些接口予以实现。
	// 但这些函数主要适用于传统设备，如ISA总线、并口、串口等设备，不能用于本PCI设备
    BOOL DEVAPI FAR PASCAL PCI8510_WritePortByte(			// 8位写端口
									HANDLE hDevice,			// 设备句柄(由CreateDevice创建)
									__int64 pbPort,			// 指定寄存器的物理基地址
									ULONG OffsetBytes,		// 相对于物理基地址的偏移位置(字节)
									BYTE Value);			// 写出的8位整型数据
    BOOL DEVAPI FAR PASCAL PCI8510_WritePortWord(HANDLE hDevice, __int64 pbPort, ULONG OffsetBytes, WORD Value);
    BOOL DEVAPI FAR PASCAL PCI8510_WritePortULong(HANDLE hDevice, __int64 pbPort, ULONG OffsetBytes, ULONG Value);
    BYTE DEVAPI FAR PASCAL PCI8510_ReadPortByte(HANDLE hDevice, __int64 pbPort, ULONG OffsetBytes);
    WORD DEVAPI FAR PASCAL PCI8510_ReadPortWord(HANDLE hDevice, __int64 pbPort, ULONG OffsetBytes);
    ULONG DEVAPI FAR PASCAL PCI8510_ReadPortULong(HANDLE hDevice, __int64 pbPort, ULONG OffsetBytes);
	// 如果您要在用户模式下，直接访问硬件端口，请安装并使用ISA\CommUser下的驱动ReadPortByteEx等函数

	//########################### 线程操作函数 ######################################
	HANDLE DEVAPI FAR PASCAL PCI8510_CreateSystemEvent(void); // 创建内核事件对象，供InitDeviceDmaAD和VB子线程等函数使用
	BOOL DEVAPI FAR PASCAL PCI8510_ReleaseSystemEvent(HANDLE hEvent); // 释放内核事件对象