PCI8510/C#/PCI8510.cs


        //##################### AD的硬件参数操作函数 ###########################
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_SaveParaAD(IntPtr hDevice, ref PCI8510_PARA_AD pADPara); // 将当前的AD采样参数保存至系统中
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_LoadParaAD(IntPtr hDevice, ref PCI8510_PARA_AD pADPara); // 将AD采样参数从系统中读出
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_ResetParaAD(IntPtr hDevice, ref PCI8510_PARA_AD pADPara); // 将AD采样参数恢复至出厂默认值



        //####################### 数字I/O输入输出函数 #################################
        // 用户可以使用WriteRegisterULong和ReadRegisterULong等函数直接控制寄存器进行I/O
        // 输入输出，但使用下面两个函数更省事，它不需要您关心寄存器分配和位操作等，而只
        // 需象VB等语言的属性操作那么简单地实现各开关量通道的控制。
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_SetDeviceDO(				// 输出开关量状态
                                            IntPtr hDevice,		// 设备句柄								        
                                           Byte[] bDOSts);	// 开关状态
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_GetDeviceDI(				// 取得开关量状态     
                                            IntPtr hDevice,		// 设备句柄								        
                                           Byte[] bDISts);	// 开关状态	
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_RetDeviceDO(				// 回读开关量状态
                                            IntPtr hDevice,		// 设备句柄	 
                                           Byte[] bDOSts);	// 开关状态

        //################# 内存映射寄存器直接操作及读写函数 ########################
        // 适用于用户对本设备更直接、更特殊、更低层、更复杂的控制。比如根据特殊的
        // 控制对象需要特殊的控制流程和控制效率时，则用户可以使用这些接口予以实现。
       [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_GetDeviceBar(			// 取得指定的指定设备寄存器组BAR地址
                                        IntPtr hDevice,			// 设备对象句柄,它由CreateDevice函数创建
                                        Int64[] pulPCIBar);	// 返回PCI BAR所有地址,具体PCI BAR中有多少可用地址请看硬件说明书
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_GetDevVersion(			// 获取设备固件及程序版本
                                        IntPtr hDevice,			// 设备对象句柄,它由CreateDevice函数创建
                                        ref UInt32 pulFmwVersion,	// 固件版本
                                        ref UInt32 pulDriverVersion);// 驱动版本
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_WriteRegisterByte(		// 往指定寄存器空间位置写入单节字数据
                                        IntPtr hDevice,			// 设备对象句柄,它由CreateDevice函数创建
                                        Int64 LinearAddr,		// 指定寄存器的线性基地址,它等于GetDeviceAddr中的LinearAddr参数返回值
                                        UInt32 OffsetBytes,		// 相对于线性基地址基地址的偏移位置(字节)
                                        Byte Value);			// 往指定地址写入单字节数据（其地址由线性基地址和偏移位置决定）
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_WriteRegisterWord(		// 写双字节数据（其余同上）
                                        IntPtr hDevice,
                                        Int64 LinearAddr,
                                        UInt32 OffsetBytes,
                                        UInt16 Value);
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_WriteRegisterULong(		// 写四节字数据（其余同上）
                                        IntPtr hDevice,
                                        Int64 LinearAddr,
                                        UInt32 OffsetBytes,
                                        UInt32 Value);
        [DllImport("PCI8510_32.DLL")]
        public static extern Byte PCI8510_ReadRegisterByte(		// 读入单字节数据（其余同上）
                                        IntPtr hDevice,
                                        Int64 LinearAddr,
                                        UInt32 OffsetBytes);
        [DllImport("PCI8510_32.DLL")]
        public static extern UInt16 PCI8510_ReadRegisterWord(		// 读入双字节数据（其余同上）
                                        IntPtr hDevice,
                                        Int64 LinearAddr,
                                        UInt32 OffsetBytes);
        [DllImport("PCI8510_32.DLL")]
        public static extern UInt32 PCI8510_ReadRegisterULong(		// 读入四字节数据（其余同上）
                                        IntPtr hDevice,
                                        Int64 LinearAddr,
                                        UInt32 OffsetBytes);

        //################# I/O端口直接操作及读写函数 ########################
        // 适用于用户对本设备更直接、更特殊、更低层、更复杂的控制。比如根据特殊的
        // 控制对象需要特殊的控制流程和控制效率时，则用户可以使用这些接口予以实现。
        // 但这些函数主要适用于传统设备，如ISA总线、并口、串口等设备，不能用于本PCI设备
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_WritePortByte(			// 8位写端口
                                        IntPtr hDevice,			// 设备句柄(由CreateDevice创建)
                                        Int64 nPort,				// 端口地址
                                        Byte Value);			// 写出的8位整型数据
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_WritePortWord(IntPtr hDevice, Int64 nPort, UInt16 Value);
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_WritePortULong(IntPtr hDevice, Int64 nPort, UInt32 Value);
        [DllImport("PCI8510_32.DLL")]
        public static extern Byte PCI8510_ReadPortByte(IntPtr hDevice, Int64 nPort);
        [DllImport("PCI8510_32.DLL")]
        public static extern UInt16 PCI8510_ReadPortWord(IntPtr hDevice, Int64 nPort);
        [DllImport("PCI8510_32.DLL")]
        public static extern UInt32 PCI8510_ReadPortULong(IntPtr hDevice, Int64 nPort);
        // 如果您要在用户模式下，直接访问硬件端口，请安装并使用ISA\CommUser下的驱动ReadPortByteEx等函数

  
        //########################### 线程操作函数 ######################################
        [DllImport("PCI8510_32.DLL")]
        public static extern IntPtr PCI8510_CreateSystemEvent(); // 创建内核事件对象，供InitDeviceDmaAD和VB子线程等函数使用
        [DllImport("PCI8510_32.DLL")]
        public static extern Boolean PCI8510_ReleaseSystemEvent(IntPtr hEvent); // 释放内核事件对象
       

   

        //***********************************************************
        // 各种FIFO存储器的长度(点)
        public const Int32 FIFO_IDT7202_LENGTH = 1024;
        public const Int32 FIFO_IDT7203_LENGTH = 2048;
        public const Int32 FIFO_IDT7204_LENGTH = 4096;
        public const Int32 FIFO_IDT7205_LENGTH = 8192;
        public const Int32 FIFO_IDT7206_LENGTH = 16384;
        public const Int32 FIFO_IDT7207_LENGTH = 32768;

       

        //***********************************************************
        // 设备地址获取函数GetDeviceAddr的参数RegisterID所使用的选项(有效部分)
        public const Int32 PCI8510_REG_MEM_PLXCHIP = 0x00; // 0号寄存器对应PLX芯片所使用的内存模式基地址(使用LinearAddr)
        public const Int32 PCI8510_REG_IO_PLXCHIP = 0x01; // 1号寄存器对应PLX芯片所使用的IO模式基地址(使用PhysAddr)

    }
}